Angi/prettify squash bugs (#26)

--- a/client/src/components/BreweriesCard/CardList.css
+++ b/client/src/components/BreweriesCard/CardList.css
@@ -1,7 +1,16 @@
 .card-list {
-	width: 85vw;
-	margin: 0 auto;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-gap: 40px;
+  width: 20rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 40px;
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
+  .card-list {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    gap: 1px 1px;
+    grid-template-areas: '.';
+  }
 }
